# rocal

./: .gitignore  Cargo.toml  README.md  deb-single-rocal  flake.nix  result
.cargo/: config.toml
src/: Settings.toml  main.rs
src/libdav/: .build.yml  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  HACKING.md  Makefile  README.md  caldav.rs  carddav.rs  clippy.toml  common.rs  dav.rs  lib.rs  live_tests.sh  sd.rs  xmlutils.rs
src/libdav/examples/: find_addressbooks.rs  find_calendars.rs  find_calendars_noauth.rs
src/libdav/live_tests/: Cargo.toml  README.md  baikal.profile  radicale.profile  xandikos.profile
src/libdav/live_tests/src/: caldav.rs  carddav.rs  main.rs
src/libdav/src/: auth.rs  caldav.rs  carddav.rs  common.rs  dav.rs  names.rs  sd.rs
