[package]
name = "rocal"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
http = "1.1.0"
hyper-rustls = "0.27.2"
icalendar = { version = "0.16.3", features = ["chrono-tz"] }
inquire = { version = "0.7.5", features = ["date"] }
libdav = "0.4.0"

[patch.crates-io]
libdav = { path = "./src/libdav" }
