[package]
name = "rocal"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
cliclack = "0.3.3"
config = "0.14.0"
dirs = "5.0.1"
futures = "0.3.30"
http = "1.1.0"
hyper = "1.4.1"
hyper-rustls = "0.27.2"
hyper-util = { version = "0.1.7", features = ["client"] }
icalendar = { version = "0.16.3", features = ["chrono-tz"] }
inquire = { version = "0.7.5", features = ["date"] }
libdav = "0.5.0"
tokio = "1.39.3"
