# Copyright 2023-2024 Hugo Osvaldo Barrera
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "libdav"
version = "0.4.0"
authors = ["Hugo Osvaldo Barrera <hugo@whynothugo.nl>"]
edition = "2021"
description = "CalDav and CardDav client implementations."
homepage = "https://sr.ht/~whynothugo/vdirsyncer-rs/"
repository = "https://git.sr.ht/~whynothugo/vdirsyncer-rs"
license = "EUPL-1.2"
keywords = ["caldav", "carddav", "webcal", "calendar", "contacts"]

[workspace]
members = [
  ".",
    "live_tests",
]

resolver = "2"

[dependencies]
base64 = "0.22.1"
domain = { version = "0.10.1", features = ["resolv"] }
email_address = { version = "0.2.9", default-features = false }
hyper-util = { version = "0.1.7", features = ["client", "client-legacy", "http1"] }
http-body-util = "0.1.2"
log = "0.4.22"
percent-encoding = "2.3.1"
roxmltree = { version = "0.20.0" }
thiserror = "1.0.63"
http = "1.1.0"
hyper = { version = "1.4.1", features = ["http1", "client"] }

[dev-dependencies]
tokio = "1.39.3"
hyper-rustls = "0.27.2"
