# Copyright 2023-2024 Hugo Osvaldo Barrera
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "live_tests"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[dependencies]
http = "1"
log = "0.4.17"
libdav = { version = "0.4.0", path = "../" }
rand = "0.8.5"
tokio = "1.25.0"
simple_logger = { version = "4.1.0", default-features = false, features = ["colors"] }
anyhow = { version = "1.0.70", features = ["backtrace"] }
serde = { version = "1.0.184", features = ["derive"] }
toml = "0.8.1"
hyper = "1.0.0"
hyper-rustls = "0.26.0"
hyper-util = { version = "0.1.1", features = ["client", "client-legacy", "http1"] }
